# carmabox

./: .coverage  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  EPIC-EXPERT-CONTROL.md  IMPLEMENTATION-PLAN.md  INVENTERING.md  MANIFEST.md  NIGHT-SESSION-PLAN.md  README.md  RULES.md  TEST_REPORT.md  conftest.py  coverage.json  hacs.json  pyproject.toml  requirements-dev.txt
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
custom_components/carmabox/: __init__.py  appliances.py  config_flow.py  config_flow.py.tmp.1170964.1773947588951  const.py  coordinator.py  coordinator_bridge.py  coordinator_commands.py  diagnostics.py  hub.py  manifest.json  notifications.py  repairs.py  sensor.py  services.yaml
docs/: GRID-GUARD-DESIGN.md  NEW-COORDINATOR-SPEC.md  TEST_REPORT.md  entity-ids.md
scripts/: carma_deploy.sh  ci-check.sh  cutover_v6_to_carmabox.sh  deploy-dev.sh  ha_deploy_verify.sh  hotfix-deploy.sh  install-hooks.sh
tests/e2e/: conftest.py  test_dashboard_cards.py  test_ha_running.py
tests/integration/: conftest.py  test_config_flow.py  test_init.py
tests/regression/: test_crosscharge_incident_20260330.py  test_incident_20260326.py
tests/scenarios/: test_adapter_fail_scenario_e.py  test_disk_workflow_scenario_c.py  test_ha_restart_scenario_d.py  test_korsladning_scenario_f.py  test_natt_scenario_b.py
tests/unit/: conftest.py  test_adapters.py  test_appliances.py  test_audit.py  test_battery_balancer.py  test_battery_health.py  test_bayesian_tuner.py  test_bridge_async.py  test_bridge_properties.py  test_commands.py  test_config_flow_coverage.py  test_config_flow_gaps_batch23.py  test_consumption.py  test_coordinator.py  test_coordinator_async_persist.py  test_coordinator_bridge.py  test_coordinator_climate_pool.py  test_coordinator_commands.py  test_coordinator_ev_cmds.py  test_coordinator_ev_control.py  test_coordinator_execute_paths.py  test_coordinator_gaps_batch24.py  test_coordinator_gaps_batch25.py  test_coordinator_gaps_batch26.py  test_coordinator_gaps_batch27.py  (+104 more)
(+62 files in other folders)
